Adding validation for database, adding close method on generic repository