@@ -6,8 +6,11 @@ import com.hvantran.sqlnative.interfaces.CheckedConsumer;
 import com.hvantran.sqlnative.interfaces.CheckedSupplier;
 import com.hvantran.sqlnative.interfaces.GenericRepository;
 import com.hvantran.sqlnative.utils.InstanceUtils;
+import com.hvantran.sqlnative.utils.ObjectUtils;
 import com.hvantran.sqlnative.utils.Pair;
+import lombok.Getter;
 import lombok.Setter;
+import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -20,7 +23,6 @@ import java.sql.*;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class RepoProxyFactory {
@@ -45,9 +47,9 @@ public class RepoProxyFactory {
     }
 
     private static class DefaultInvocationHandler implements InvocationHandler {
-        private Properties configuration;
-        private ConnectionManager connectionManager;
-        private Class<? extends GenericRepository> genericRepository;
+        private final Properties configuration;
+        private final ConnectionManager connectionManager;
+        private final Class<? extends GenericRepository> genericRepository;
 
         public DefaultInvocationHandler(ConnectionManager connectionManager, Properties configuration, Class<? extends GenericRepository> genericRepository) {
             this.connectionManager = connectionManager;
@@ -58,8 +60,20 @@ public class RepoProxyFactory {
         @Override
         public Object invoke(Object proxy, Method method, Object[] objects) throws Throwable {
             LOGGER.info("Invoke method name: {}", method.getName());
-            Database database = genericRepository.getAnnotation(Database.class);
-            Connection connection = connectionManager.getConnection(database, configuration);
+
+            if ("close".equals(method.getName())) {
+                ObjectUtils.checkThenThrow(Objects.isNull(connectionManager.getConnection()), "Cannot close connection because it is not open");
+                connectionManager.getConnection().close();
+                LOGGER.info("Connection is closed");
+                return null;
+            }
+
+            Connection connection = Optional.ofNullable(connectionManager.getConnection())
+                    .orElseGet(() -> {
+                        Database database = genericRepository.getAnnotation(Database.class);
+                        return connectionManager.initialConnection(database, configuration);
+                    });
+
 
             Annotation[][] parameterAnnotations = method.getParameterAnnotations();
             List<Pair<Param, Object>> paramValueMap = IntStream.range(0, objects.length).mapToObj(index -> {
@@ -68,7 +82,7 @@ public class RepoProxyFactory {
                         .map(Param.class::cast)
                         .findFirst();
                 return paramOptional.map(param -> Pair.of(param, objects[index])).orElse(null);
-            }).filter(Objects::nonNull).collect(Collectors.toList());
+            }).filter(Objects::nonNull).toList();
 
             Class mappingToClass = IntStream.range(0, objects.length)
                     .filter(parameterIndex -> objects[parameterIndex] instanceof Class<?>)
@@ -100,7 +114,7 @@ public class RepoProxyFactory {
                 LOGGER.info("Number of affect records: {}", updateCount);
                 return updateCount;
             }
-            try {
+            try (resultSet; preparedStatement){
                 LOGGER.info("Mapping SELECT query response to DTO classes");
                 List<Object> outputDtoInstances = new ArrayList<>();
                 while (resultSet.next()) {
@@ -126,27 +140,37 @@ public class RepoProxyFactory {
                     }
                 }
                 return outputDtoInstances;
-            } finally {
-                resultSet.close();
-                preparedStatement.close();
             }
         }
     }
 
     @Setter
+    @Getter
     private static class ConnectionManager {
 
         private Connection connection;
 
-        public Connection getConnection(Database database, Properties configuration) {
+        public Connection initialConnection(Database database, Properties configuration) {
             if (Objects.isNull(connection)) {
                 String databaseURL = checkThenGetFromProperties(database.url(), configuration);
+                ObjectUtils.checkThenThrow(StringUtils.isEmpty(databaseURL), "Database URL cannot be empty");
+
+                LOGGER.info("Initial connection to database: {}", databaseURL);
                 String username = checkThenGetFromProperties(database.username(), configuration);
                 String password = checkThenGetFromProperties(database.password(), configuration);
-                CheckedSupplier<Connection> connectionCheckedSupplier = () -> DriverManager.getConnection(databaseURL, username, password);
+                ObjectUtils.checkThenThrow(StringUtils.isEmpty(username) && StringUtils.isNotEmpty(password),
+                        "Missing database username");
+                ObjectUtils.checkThenThrow(StringUtils.isEmpty(password) && StringUtils.isNotEmpty(username),
+                        "Missing database password");
+                CheckedSupplier<Connection> connectionCheckedSupplier = () -> {
+                    if (StringUtils.isNotEmpty(username) && StringUtils.isNotEmpty(password)) {
+                        return DriverManager.getConnection(databaseURL, username, password);
+                    }
+                    return DriverManager.getConnection(databaseURL);
+                };
                 setConnection(connectionCheckedSupplier.get());
             }
-            return connection;
+            return getConnection();
         }
 
         private String checkThenGetFromProperties(String input, Properties properties) {
